# monte-carlo-generic-simulator

./: .gitignore  LICENSE  Monte Carlo Simulation.ipynb  README.md  montecarlo.py  montecarlo_test_results.txt  montecarlo_tests.py  pyproject.toml  setup.py
src/monte-carlo-generic-simulator/: montecarlo.py
