[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monte-carlo-generic-simulator"
description = 'A Simple Monte Carlo Simulator for different board games such as Coin flips , Dice rolls , Roman Alphabet , Card shuffle and many more.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["python", "monte", "carlo", "generic", "simulator", "monte-carlo", "monte-carlo-generic", "monte carlo generic simulator",
    "dice", "coin", "flip", "alphabet"]
authors = [
    { name = "Brook Tarekegn Assefa", email = "brooksideas@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/brooksideas/monte-carlo-generic-simulator/blob/main/README.md"
Issues = "https://github.com/brooksideas/monte-carlo-generic-simulator/issues"
Source = "https://github.com/brooksideas/monte-carlo-generic-simulator"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=monte_carlo_generic_simulatormonte_carlo_generic_simulator --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/montecarlo"]
